# TIPE

./: .gitignore  .gitmodules  README.md  Simulation_orbites.sln
Motor/: CMakeLists.txt  Journal.odt
Motor/include/: Application.h  pch.h
Motor/include/Motor/: Entity.h
Motor/include/Motor/2D/: MassiveObject2D.h  Planet2D.h
Motor/include/Motor/3D/: MassiveObject3D.h  Planet3D.h
Motor/include/Motor/Core/: MassiveObject.h  ObjectsHandler.h
Motor/libs/PGL/: CMakeLists.txt
Motor/libs/PGL/include/pgl/: Camera.h  Drawable.h  Logger.h  pgl.h
Motor/libs/PGL/include/pgl/Core/: ObjectsHandler.h  Window.h
Motor/libs/PGL/include/pgl/basic/: Circle.h  basic.h
Motor/libs/PGL/include/pgl/openGL/: Renderer.h
Motor/libs/PGL/src/: Camera.cpp  Drawable.cpp  pgl.cpp
Motor/libs/PGL/src/Core/: ObjectsHandler.cpp  Window.cpp
Motor/libs/PGL/src/basic/: Circle.cpp
Motor/libs/PGL/src/openGL/: Renderer.cpp
Motor/src/: Motor.cpp
Motor/src/General/: Application.cpp
Motor/src/Motor/: Entity.cpp
Motor/src/Motor/2D/: MassiveObject2D.cpp  Planet2D.cpp
Motor/src/Motor/3D/: MassiveObject3D.cpp  Planet3D.cpp
Motor/src/Motor/Core/: MassiveObject.cpp  ObjectsHandler.cpp
SimuApp/: SimuApp.cpp  SimuApp.vcxproj  SimuApp.vcxproj.filters  affichage_trajectoire_systeme.py  example_Rosenbrock.cpp
SimuApp/simulation_data/: ATS.py  Donnees_astres.py  ImportData.py  TIPE_SimuOrbit.pyd  affichage_trajectoire_systeme.py  comparateur_de_traj.py  graphics.py  idees_distances.txt  main.py  projection_3d.py  prolong_ind.py  prolongement.py  stats.py  stats2.py  stats_ntb.ipynb  stats_temp.py  temp.py  testSet.py  trajectoire_reelle.py  valid_simulations.txt  valids.txt
SimuCore/: SimuCore.vcxproj  SimuCore.vcxproj.filters
SimuCore/include/: SimuCore.h  pch.h
SimuCore/include/DataExport/: Accumulators.h  AsyncDataExporter.h  ClustersData.h  GenerationStats.h  GeneticData.h  HDF5WriterAsync.h  PhysicsData.h  RocketData.h  Snapshot.h  StatisticsData.h  TrajectoryData.h  TrajectorySoA.h  Writable.h
SimuCore/include/DataExport/Bases/: AsyncWriter.h  Writable.h
SimuCore/include/DataExport/Writables/: GenerationSnapshot.h
SimuCore/include/DataExport/Writers/: HDF5AsyncWriter.h  SimulationAsyncWriter.h
SimuCore/include/GaLib/: genetic.hpp  genetic_algorithm.hpp  genetic_config.hpp  genetic_individu.hpp  genetic_utils.hpp
SimuCore/include/SimuCore/: constants.h  utility.h
SimuCore/include/SimuCore/Optimization/: optimization.h
SimuCore/include/SimuCore/Units/: all.h  distances.h  masses.h  speeds.h  times.h
SimuCore/include/SimuCore/integrator/: integrator.h
SimuCore/src/DataExport/: Accumulators.cpp  AsyncDataExporter.cpp  ClustersData.cpp  GeneticData.cpp  RocketData.cpp  StatisticsData.cpp  TrajectoryData.cpp  Writable.cpp  physicsData.cpp
SimuCore/src/Optimization/: optimization.cpp
SimuCore/src/structures/: Planet.cpp  Rocket.cpp  System.cpp
SimuCore/src/theory/: formula.cpp
SimuPy/: SimuPy.vcxproj  SimuPy.vcxproj.filters  pch.h  wrapper.cpp
patches/: patch_vac_fevrier.patch
python/: .python-version  TIPE_SimuOrbit.pyd  TIPE_SimuOrbit_d.pyd  benchmark_claude.py  calcul_cout.py  comparaison_hohmann_bielliptique_3d.py  debug_version.py  help.txt  lambert_by_parts.py  lance_mon_fichier.bat  orbite_hohmann.py  print_color.py  sandbox.py  testVersions.py  test_color.py  test_erreur.py  v1.py  v2.py  v3.py  versionDash_Poltly.py
python/benchmarks/benchmark_20250913_234324/: benchmark_results_20250913_234324.txt
python/benchmarks/benchmark_20250913_234602/: benchmark_results_20250913_234602.txt
python/benchmarks/benchmark_20250914_000940/: benchmark_results_20250914_000940.txt
python/benchmarks/benchmark_20250914_122643/: benchmark_results_20250914_122643.txt
python/benchmarks/benchmark_20250914_141605/: benchmark_results_20250914_141605.txt
python/benchmarks/benchmark_20250914_165738/: results_20250914_165738.csv  results_20250914_165738.json
python/benchmarks/benchmark_20250914_170000/: results_20250914_170000.csv  results_20250914_170000.json
python/lambert_plus_test/: influence_soleil_vs_terre.py
python/presentation/: TIPE_SimuOrbit.pyd  trajectoire_avec_vecteurs.py
res/flaticon/: _planet.txt
(+19 files in other folders)
